--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Curso de asincronismo escuela de JS",
   "main": "src/index.js",
   "scripts": {
-    "callback": "node src/callbacks/index.js"
+    "callback": "node src/callbacks/index.js",
+    "callback:challenge": "node src/callbacks/challenge.js"
   },
   "keywords": [
     "callbacks",
@@ -12,5 +13,8 @@
     "asyn/await"
   ],
   "author": "Andrés Fernando Saa",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "xmlhttprequest": "^1.8.0"
+  }
 }
